test_suite5/ALAN/test_suite/alan-2022-examples/failing/000910_mutation.alan
source U begin boolean C, y put "f"; relax end
